<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/relLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            style="@style/formngaytaophieu">

            <TextView
                android:layout_weight="1"
                style="@style/tvmaphieu"
                android:text="@string/maphieu"
                android:id="@+id/tvmaphieu"/>

            <EditText
                android:layout_weight="2"
                android:id="@+id/edmaphieu"
                style="@style/edmaphieu"
                android:hint="@string/nhapphieuthu"
               />
        </LinearLayout>
        <LinearLayout
            style="@style/formngaytaophieu">

            <TextView
                android:layout_weight="1"
                style="@style/tvmakhachang"
                android:text="@string/makhachhang"
                android:id="@+id/tvmakhachhang"/>

            <EditText
                android:layout_weight="2"
                android:id="@+id/edmakhachhang"
                style="@style/edmakhachhang"
                android:hint="@string/nhapmakhachhang"
               />
        </LinearLayout>
        <LinearLayout
            style="@style/formngaytaophieu">

            <TextView
                android:layout_weight="1"
                style="@style/ngaytaophieu"
                android:text="@string/ngaytaophieu"
                android:id="@+id/tvtaophieu"/>

            <EditText
                android:layout_weight="2"
                android:id="@+id/edngaytaophieu"
                style="@style/thoigiantaophieu"
                android:hint="@string/nhapngaycuasophieu"
                />
        </LinearLayout>

        <LinearLayout
            style="@style/formloaiphieu">
            <TextView
                android:layout_weight="1"
                style="@style/loaiphieu"
                android:text="@string/loaiphieu"
                android:id="@+id/tvloaiphieu"/>
            <Spinner
                android:id="@+id/spnloaiphieu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:entries="@array/phieu_thu_arrays"
                style="@style/comboloaiphieu">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            style="@style/formsotien">

            <TextView
                android:layout_weight="1"
                style="@style/sotien"
                android:text="@string/sotien"
                android:id="@+id/tvsdtien"/>

            <EditText
                android:layout_weight="2"
                style="@style/nhapsotien"
                android:hint="@string/nhapsotien"
                android:id="@+id/edsotien"
                android:inputType="number"/>
        </LinearLayout>


        <LinearLayout style="@style/chucnang">
        android:layout_width="match_parent"
        android:layout_height="100dp"
            android:layout_gravity="center">
        <Button
            android:layout_centerInParent="true"
            android:layout_alignParentLeft="true"
            android:id="@+id/btnAdds"
            android:textSize="15sp"
            android:text="Sửa Phiếu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
           />
        <Button
            android:layout_marginRight="40dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:id="@+id/btnExits"
            android:textSize="15sp"
            android:text="Thoát"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>